docs: add codepen link

--- a/exmaples/cards_slider.html
+++ b/exmaples/cards_slider.html
@@ -103,6 +103,8 @@
 
 <body>
 
+    <h1 style="text-transform: uppercase; text-align: center;">Sliding cards horizontally</h1>
+    <strong>Codepen.io: </strong> <a href="https://codepen.io/aliaadel/pen/rKZGzz" target="blank">https://codepen.io/aliaadel/pen/rKZGzz</a>
     <div class="container">
         <div id="slide-left-container">
             <div class="slide-left">
